--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_mobile_vision: ^0.1.3
+  sqflite:
+  path:
 
 
   # The following adds the Cupertino Icons font to your application.
